--- a/css/feature_map.css
+++ b/css/feature_map.css
@@ -1,8 +1,16 @@
 .page-map .centered{width:100%}
 .page-map .centered #content{width:100%}
 
+/* MAP PREVIEW */
+#gmap-preview #preview{float:right;}
+#gmap-preview .coordinates{float:left; display:inline;}
+#gmap-preview #gmap{width:350px; height:250px;}
+#gmap-preview a{float:left;}
+
 #map_wrapper {position:relative; height:80%; width: 100%;display:block;}
 #map_canvas {height: 750px; width:100%; float:left;}
+
+
 
 /*#map_options {position:relative; height:750px; width:15%;background-color: #0B0D12;clear:none;float:right;}*/
 #map_options {position:relative; height:auto; width:100%;background-color: white;clear:none;float:right;}
@@ -15,6 +23,15 @@
   clear:none;
 }
 
+#zipcodesearchform{
+  display:inline-block;
+  background-color:#DDD;
+  top:60px;
+  right:10px;
+  position:absolute;
+  padding:10px;
+}
+
 .block{clear:both;}
 
 .padded{padding:10px !important;}
@@ -22,3 +39,9 @@
 .ui-slider-handle{height:28px;display:inline-block;position:absolute;width:5px;top:-4px;}
 .ui-widget-header{height:20px;}
 .ui-widget-content{height:22px; position:relative;}
+
+/*
+markers :
+http://mapicons.nicolasmollet.com/category/markers/sports/cycling/?custom_color=8a623f&style=
+
+*/
