added begin of listing

--- a/css/feature_map.css
+++ b/css/feature_map.css
@@ -1,5 +1,8 @@
 .page-map .centered{width:100%}
-.page-map .centered #content{width:100%}
+.page-map .centered #content{
+  width:100%;
+  background-color:#2D2D2D;
+}
 
 /* MAP PREVIEW */
 #gmap-preview #preview{float:right;}
@@ -7,8 +10,8 @@
 #gmap-preview #gmap{width:350px; height:250px;}
 #gmap-preview a{float:left;}
 
-#map_wrapper {position:relative; height:80%; width: 100%;display:block;}
-#map_canvas {height: 750px; width:100%; float:left;}
+#map_wrapper {position:relative; height:80%; width:100%;display:block;}
+#map_canvas {height: 750px; width:80%; float:left;}
 
 
 
@@ -40,16 +43,10 @@
 .ui-widget-header{height:20px;}
 .ui-widget-content{height:22px; position:relative;}
 
-/*
-markers :
-http://mapicons.nicolasmollet.com/category/markers/sports/cycling/?custom_color=8a623f&style=
-
-*/
 
 /********** INFOWINDOW **********/
 .infoBubble{
-  background: -webkit-gradient(linear,left top,left bottom,color-stop(0, rgb(112,112,112)),color-stop(0.51, rgb(94,94,94)),color-stop(0.52, rgb(57,57,57)));
-  background: -moz-linear-gradient(center top,rgb(112,112,112) 0%,rgb(94,94,94) 51%,rgb(57,57,57) 52%);
+
 }
 .infotext{
   text-shadow: 0 -1px 0 #000;
@@ -58,6 +55,8 @@ http://mapicons.nicolasmollet.com/category/markers/sports/cycling/?custom_color=
   font-size: 14px;
   line-height: 20px;
   padding: 4px 15px 4px 15px;
-/*  font-weight: bold;*/
-  background: url(../images/arrow.png) 95% 50% no-repeat;
+}
+.infodetails{
+  border:1px solid green;
+  
 }
