got relocation and cookie functionality working

--- a/css/feature_map.css
+++ b/css/feature_map.css
@@ -64,8 +64,11 @@
   width:20%;
 }
 #map_listing li{
-  background-color:black;
+  background-color:#2D2D2D;
   color:white;
   display:block;
   padding:10px 8px;
+}
+#map_listing li.active{
+  background-color:black;
 }
